tests/baselines/reference/structConstructorParameterProperties2_basic.errors.txt
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties2_basic.ts(10,5): error TS2300: Duplicate identifier 'y'.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties2_basic.ts(11,24): error TS2300: Duplicate identifier 'y'.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties2_basic.ts(18,5): error TS2300: Duplicate identifier 'y'.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties2_basic.ts(19,25): error TS2300: Duplicate identifier 'y'.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties2_basic.ts(26,5): error TS2300: Duplicate identifier 'y'.
tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties2_basic.ts(27,27): error TS2300: Duplicate identifier 'y'.


==== tests/cases/conformance/basicStructs/constructorDeclarations_basic/constructorParameters_basic/structConstructorParameterProperties2_basic.ts (6 errors) ====
    struct C {
        y: number;
        constructor(y: number) { } // ok
    }
    
    var c: C;
    var r = c.y;
    
    struct D {
        y: number;
        ~
!!! error TS2300: Duplicate identifier 'y'.
        constructor(public y: number) { } // error, Duplicate identifier 'y'
                           ~
!!! error TS2300: Duplicate identifier 'y'.
    }
    
    var d: D;
    var r2 = d.y;
    
    struct E {
        y: number;
        ~
!!! error TS2300: Duplicate identifier 'y'.
        constructor(private y: number) { } // error, Duplicate identifier 'y'
                            ~
!!! error TS2300: Duplicate identifier 'y'.
    }
    
    var e: E;
    var r3 = e.y; // error
    
    struct F {
        y: number;
        ~
!!! error TS2300: Duplicate identifier 'y'.
        constructor(protected y: number) { } // error, Duplicate identifier 'y'
                              ~
!!! error TS2300: Duplicate identifier 'y'.
    }
    
    var f: F;
    var r4 = f.y; // error
    